WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82129
REGRESSION (
r110065
-
r110080
): Content drawing outside overflow: hidden at ynet.co.il
https://bugs.webkit.org/show_bug.cgi?id=82129
Summary
REGRESSION (r110065-r110080): Content drawing outside overflow: hidden at yne...
mitz
Reported
2012-03-24 11:06:22 PDT
To reproduce, navigate to the URL and start scrolling the page down. In the sidebar on the right hand side, there are several boxes with blue headers, each showing three video thumbnails. After
r110080
, three additional thumbnails are rendered outside the box, to its left, overlapping other page content. This should not happen, as the boxes specify overflow: hidden. This was most likely caused by <
http://trac.webkit.org/r110072
>, the fix for
bug 75568
.
Attachments
Reduction
(190 bytes, text/html)
2012-03-24 11:45 PDT
,
mitz
no flags
Details
Proposed fix: move the ensureLayer() before removing before and start overflow.
(13.76 KB, patch)
2012-03-26 09:47 PDT
,
Julien Chaffraix
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ec2-cr-linux-02
(9.68 MB, application/zip)
2012-03-26 10:23 PDT
,
WebKit Review Bot
no flags
Details
Added the missing rebaseline. Dan, I would love your comment on whether the tests will be skipped on WK2.
(26.41 KB, patch)
2012-03-28 10:42 PDT
,
Julien Chaffraix
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2012-03-24 11:08:03 PDT
<
rdar://problem/11115138
>
mitz
Comment 2
2012-03-24 11:13:04 PDT
Julien, please consider reverting
r110072
if you cannot come up with a fix for this bug and for
bug 81802
soon.
mitz
Comment 3
2012-03-24 11:45:22 PDT
Created
attachment 133645
[details]
Reduction
Julien Chaffraix
Comment 4
2012-03-26 09:47:53 PDT
Created
attachment 133836
[details]
Proposed fix: move the ensureLayer() before removing before and start overflow.
WebKit Review Bot
Comment 5
2012-03-26 10:23:07 PDT
Comment on
attachment 133836
[details]
Proposed fix: move the ensureLayer() before removing before and start overflow.
Attachment 133836
[details]
did not pass chromium-ews (chromium-xvfb): Output:
http://queues.webkit.org/results/12134910
New failing tests: fast/block/lineboxcontain/block-font.html fast/block/lineboxcontain/font.html fast/block/lineboxcontain/block-glyphs.html
WebKit Review Bot
Comment 6
2012-03-26 10:23:14 PDT
Created
attachment 133841
[details]
Archive of layout-test-results from ec2-cr-linux-02 The attached test failures were seen while running run-webkit-tests on the chromium-ews. Bot: ec2-cr-linux-02 Port: <class 'webkitpy.common.config.ports.ChromiumXVFBPort'> Platform: Linux-2.6.35-28-virtual-x86_64-with-Ubuntu-10.10-maverick
Julien Chaffraix
Comment 7
2012-03-28 10:42:13 PDT
Created
attachment 134332
[details]
Added the missing rebaseline. Dan, I would love your comment on whether the tests will be skipped on WK2.
Julien Chaffraix
Comment 8
2012-03-29 14:57:28 PDT
Comment on
attachment 134332
[details]
Added the missing rebaseline. Dan, I would love your comment on whether the tests will be skipped on WK2. Manually landed the fix in
http://trac.webkit.org/changeset/112582
. Thanks Ojan and Dan for the reviews.
Simon Fraser (smfr)
Comment 9
2012-03-30 10:29:45 PDT
See also
bug 82742
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug