REGRESSION (r110065-r110080): Content drawing outside overflow: hidden at ynet.co.il https://bugs.webkit.org/show_bug.cgi?id=82129

Reviewed by Ojan Vafai.

Source/WebCore:

Tests: fast/overflow/before-after-overflow-hidden-horizontal-writing-mode-tb-expected.html
       fast/overflow/before-after-overflow-hidden-horizontal-writing-mode-tb.html
       fast/overflow/before-after-overflow-hidden-vertical-writing-mode-rl-expected.html
       fast/overflow/before-after-overflow-hidden-vertical-writing-mode-rl.html
       fast/overflow/start-end-overflow-hidden-horizontal-writing-mode-tb-expected.html
       fast/overflow/start-end-overflow-hidden-horizontal-writing-mode-tb.html
       fast/overflow/start-end-overflow-hidden-vertical-writing-mode-rl-expected.html
       fast/overflow/start-end-overflow-hidden-vertical-writing-mode-rl.html

This is a regression from r110072. I wrongly thought we should call ensureLayer if we create our RenderOverflow.
However the current overflow code removes the before and start overflows (like in horizontal writing mode with ltr direction,
we never have a top or a left overflow). Because of that we would not get a RenderLayer as expected and the overflow clip rects
would be wrong on our RenderLayer children.

* rendering/RenderBox.cpp:
(WebCore::RenderBox::addLayoutOverflow):
Moved the ensureLayer() call after the check that we do have some overflow but before we remove the overflow in some directions.

LayoutTests:

* fast/overflow/before-after-overflow-hidden-horizontal-writing-mode-tb-expected.html: Added.
* fast/overflow/before-after-overflow-hidden-horizontal-writing-mode-tb.html: Added.
* fast/overflow/before-after-overflow-hidden-vertical-writing-mode-rl-expected.html: Added.
* fast/overflow/before-after-overflow-hidden-vertical-writing-mode-rl.html: Added.
* fast/overflow/start-end-overflow-hidden-horizontal-writing-mode-tb-expected.html: Added.
* fast/overflow/start-end-overflow-hidden-horizontal-writing-mode-tb.html: Added.
* fast/overflow/start-end-overflow-hidden-vertical-writing-mode-rl-expected.html: Added.
* fast/overflow/start-end-overflow-hidden-vertical-writing-mode-rl.html: Added.
Added 4 ref tests that should cover the 4 different values of (hasTopOverflow, hasLeftOverflow)
in RenderBox::addLayoutOverflow.

* platform/chromium-linux/fast/box-shadow/shadow-buffer-partial-expected.txt:
* platform/chromium-win/fast/block/lineboxcontain/block-font-expected.txt:
* platform/chromium-win/fast/block/lineboxcontain/block-glyphs-expected.txt:
* platform/chromium-win/fast/block/lineboxcontain/font-expected.txt:
Rebaselined those tests on Chromium linux (new layers).

* platform/chromium/test_expectations.txt:
* platform/efl/Skipped:
* platform/gtk/Skipped:
* platform/mac/Skipped:
* platform/qt/Skipped:
* platform/win/Skipped:
* platform/wk2/Skipped:
Skipped the previous tests on the other platforms.

Canonical link: https://commits.webkit.org/99989@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@112582 268f45cc-cd09-0410-ab3c-d52691b4dbfc